--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "nuxt": "^3.17.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
