--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "nuxt": "^3.17.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^2.4.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "vitepress": "^1.6.3"
   }
 }
