--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-shadow": "^2.2.1",
+    "@nuxt/icon": "^1.15.0",
     "nuxt": "^3.17.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
